<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/friend_detail_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/flower1_name"
        android:textAlignment="center"
        android:textSize="24dp"
        android:textAppearance="?attr/textAppearanceHeadline3" />

    <EditText
        android:id="@+id/friend_detail_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/flower1_description" />

    <ImageView
        android:id="@+id/friend_detail_image"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:layout_gravity="center"
        android:contentDescription="@string/flower_image_content_description"
        app:srcCompat="@drawable/rose" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/save_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/save" />

        <Button
            android:id="@+id/remove_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/remove_this_flower" />



    </TableRow>
</LinearLayout>